[gd_scene load_steps=22 format=3 uid="uid://c55mey1plqhgj"]

[ext_resource type="Script" path="res://Scenes/Enemy/Scripts/wolfenemy.gd" id="1_1fepx"]
[ext_resource type="Texture2D" uid="uid://yb0ou81k6gte" path="res://Scenes/Enemy/Texture/HostileBug-Sheet.png" id="2_hvecy"]
[ext_resource type="Texture2D" uid="uid://oh2ey06awpjy" path="res://Scenes/Enemy/Texture/HostileBugDeath-Sheet.png" id="3_srpmw"]
[ext_resource type="Texture2D" uid="uid://byk8qwuq56h8k" path="res://Scenes/Enemy/Texture/HostileBugIdle-Sheet.png" id="4_so48q"]
[ext_resource type="AudioStream" uid="uid://bdxah8ctabkke" path="res://Sounds/SFX/robot-power-off-97246.mp3" id="4_to0f0"]
[ext_resource type="AudioStream" uid="uid://bkge5jqx784hn" path="res://Sounds/SFX/metal-hit-92-200420.mp3" id="6_dxyub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ates"]
radius = 183.141

[sub_resource type="CircleShape2D" id="CircleShape2D_v0kel"]
radius = 20.4951

[sub_resource type="Gradient" id="Gradient_0u3qh"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.990566)
colors = PackedColorArray(0.988235, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e1f6o"]
gradient = SubResource("Gradient_0u3qh")
width = 97
height = 58
fill = 1
fill_from = Vector2(0.346405, 0.53988)
fill_to = Vector2(0.542484, 0.584798)

[sub_resource type="Gradient" id="Gradient_l3ku1"]
offsets = PackedFloat32Array(0.00645161, 0.677419, 1)
colors = PackedColorArray(1, 1, 1, 0.953642, 1, 1, 1, 0.953642, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2gool"]
gradient = SubResource("Gradient_l3ku1")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.6, 0.4)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_1khnn"]
_data = [Vector2(0.00277778, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0drgn"]
offsets = PackedFloat32Array(0.192547, 0.751553)
colors = PackedColorArray(1, 0, 0, 1, 0.94902, 0, 0.560784, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaslf"]
atlas = ExtResource("2_hvecy")
region = Rect2(0, 0, 244, 61)

[sub_resource type="Animation" id="Animation_0mo03"]
resource_name = "Chase"
length = 0.67
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_yaslf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.926017,
"start_offset": 0.0,
"stream": ExtResource("6_dxyub")
}, {
"end_offset": 0.954309,
"start_offset": 0.0,
"stream": ExtResource("6_dxyub")
}],
"times": PackedFloat32Array(0, 0.4)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_yi2jd"]
resource_name = "Death"
length = 1.21
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_srpmw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.1199,
"start_offset": 0.6508,
"stream": ExtResource("4_to0f0")
}],
"times": PackedFloat32Array(0.5)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_mny6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_yaslf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2p5tw"]
atlas = ExtResource("4_so48q")
region = Rect2(0, 0, 122, 61)

[sub_resource type="Animation" id="Animation_uvuq0"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_2p5tw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctn77"]
_data = {
"Chase": SubResource("Animation_0mo03"),
"Death": SubResource("Animation_yi2jd"),
"RESET": SubResource("Animation_mny6o"),
"idle": SubResource("Animation_uvuq0")
}

[node name="enemy" type="Node2D"]

[node name="enemy1" type="Node2D" parent="." groups=["Enemies"]]

[node name="enemy" type="CharacterBody2D" parent="enemy1" groups=["Enemies"]]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_1fepx")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="enemy1/enemy"]
z_index = 1
position = Vector2(-1, 18)
polygon = PackedVector2Array(-22, -12, -10.9037, -11.6898, -0.134594, -12.158, 10.2599, -11.5025, 21.2845, -10.6358, 21, 10, -23, 10, -23, -1, -23, -4, -22, -10)

[node name="detection" type="Area2D" parent="enemy1/enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy1/enemy/detection"]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_4ates")

[node name="playerdeath" type="Area2D" parent="enemy1/enemy"]
position = Vector2(17.5, 12.5)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="enemy1/enemy/playerdeath"]
light_mask = 16385
visibility_layer = 16385
position = Vector2(-8.75, -11.25)
scale = Vector2(1.5625, 1.27841)
polygon = PackedVector2Array(-28, 3.91111, 20.8, 3.91111, 24, 10.7555, 20.8, 18.5778, -28, 18.5778, -32, 10.7555)

[node name="playercollision" type="Area2D" parent="enemy1/enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy1/enemy/playercollision"]
position = Vector2(1.25, 3.75)
scale = Vector2(1.06181, 0.452596)
shape = SubResource("CircleShape2D_v0kel")
debug_color = Color(0.921569, 0.25098, 0.305882, 0.419608)

[node name="PointLight2Dleft" type="PointLight2D" parent="enemy1/enemy"]
visible = false
position = Vector2(-18.1429, 9.84223)
rotation = -0.607623
energy = 2.97
texture = SubResource("GradientTexture2D_e1f6o")
texture_scale = 0.3

[node name="PointLight2Dright" type="PointLight2D" parent="enemy1/enemy"]
position = Vector2(17.889, 10.2721)
rotation = -2.33553
energy = 2.97
texture = SubResource("GradientTexture2D_e1f6o")
texture_scale = 0.3

[node name="CPUParticles2D" type="CPUParticles2D" parent="enemy1/enemy"]
z_index = 2
position = Vector2(0, -2)
scale = Vector2(0.3, 0.3)
emitting = false
amount = 200
one_shot = true
speed_scale = 1.5
randomness = 1.0
fixed_fps = 60
texture = SubResource("GradientTexture2D_2gool")
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(0, -2)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 198.88
scale_amount_min = 0.0
scale_amount_curve = SubResource("Curve_1khnn")
color_ramp = SubResource("Gradient_0drgn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy1/enemy"]
libraries = {
"": SubResource("AnimationLibrary_ctn77")
}

[node name="Sprite2D" type="Sprite2D" parent="enemy1/enemy"]
position = Vector2(3, -3)
texture = SubResource("AtlasTexture_yaslf")
flip_h = true
hframes = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="enemy1/enemy"]
volume_db = -32.768
pitch_scale = 0.78
max_distance = 500.0
bus = &"SFX"

[node name="enemy2" type="Node2D" parent="." groups=["Enemies"]]

[node name="enemy2" type="CharacterBody2D" parent="enemy2" groups=["Enemies"]]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_1fepx")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="enemy2/enemy2"]
z_index = 1
position = Vector2(-1, 18)
polygon = PackedVector2Array(-22, -12, -11.9338, -12.158, 0.0526962, -12.0644, 10.3536, -11.7834, 20.9021, -11.0962, 21, 10, -23, 10, -23, -1, -23, -4, -22, -10)
one_way_collision = true
one_way_collision_margin = 23.6

[node name="detection" type="Area2D" parent="enemy2/enemy2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy2/enemy2/detection"]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_4ates")

[node name="playerdeath" type="Area2D" parent="enemy2/enemy2"]
position = Vector2(16.25, 12.5)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="enemy2/enemy2/playerdeath"]
light_mask = 16385
visibility_layer = 16385
position = Vector2(-7.5, -10)
scale = Vector2(1.5625, 1.27841)
polygon = PackedVector2Array(20.8, 2.93333, 24, 9.77777, 20.8, 17.6, -28, 17.6, -32, 9.77777, -28, 2.93333)

[node name="playercollision" type="Area2D" parent="enemy2/enemy2"]
position = Vector2(0, -3.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy2/enemy2/playercollision"]
position = Vector2(5.96046e-08, 7)
scale = Vector2(1.06181, 0.452596)
shape = SubResource("CircleShape2D_v0kel")
debug_color = Color(0.921569, 0.25098, 0.305882, 0.419608)

[node name="PointLight2Dleft" type="PointLight2D" parent="enemy2/enemy2"]
visible = false
position = Vector2(-18.1429, 9.84223)
rotation = -0.607623
energy = 2.97
texture = SubResource("GradientTexture2D_e1f6o")
texture_scale = 0.3

[node name="PointLight2Dright" type="PointLight2D" parent="enemy2/enemy2"]
position = Vector2(17.889, 10.2721)
rotation = -2.33553
energy = 2.97
texture = SubResource("GradientTexture2D_e1f6o")
texture_scale = 0.3

[node name="CPUParticles2D" type="CPUParticles2D" parent="enemy2/enemy2"]
z_index = 2
position = Vector2(0, -2)
scale = Vector2(0.3, 0.3)
emitting = false
amount = 200
one_shot = true
speed_scale = 1.5
randomness = 1.0
fixed_fps = 60
texture = SubResource("GradientTexture2D_2gool")
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(0, -2)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 198.88
scale_amount_min = 0.0
scale_amount_curve = SubResource("Curve_1khnn")
color_ramp = SubResource("Gradient_0drgn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy2/enemy2"]
libraries = {
"": SubResource("AnimationLibrary_ctn77")
}

[node name="Sprite2D" type="Sprite2D" parent="enemy2/enemy2"]
position = Vector2(3, -3)
texture = SubResource("AtlasTexture_yaslf")
flip_h = true
hframes = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="enemy2/enemy2"]
volume_db = -32.768
pitch_scale = 0.78
max_distance = 500.0
bus = &"SFX"

[connection signal="body_entered" from="enemy1/enemy/detection" to="enemy1/enemy" method="_on_detection_body_entered"]
[connection signal="body_exited" from="enemy1/enemy/detection" to="enemy1/enemy" method="_on_detection_body_exited"]
[connection signal="body_entered" from="enemy1/enemy/playerdeath" to="enemy1/enemy" method="_on_playerdeath_body_entered"]
[connection signal="body_entered" from="enemy1/enemy/playercollision" to="enemy1/enemy" method="_on_playercollision_body_entered"]
[connection signal="body_entered" from="enemy2/enemy2/detection" to="enemy2/enemy2" method="_on_detection_body_entered"]
[connection signal="body_exited" from="enemy2/enemy2/detection" to="enemy2/enemy2" method="_on_detection_body_exited"]
[connection signal="body_entered" from="enemy2/enemy2/playerdeath" to="enemy2/enemy2" method="_on_playerdeath_body_entered"]
[connection signal="body_entered" from="enemy2/enemy2/playercollision" to="enemy2/enemy2" method="_on_playercollision_body_entered"]
